2000-05-30  Christopher James Lahey  <clahey@helixcode.com>

	* gui/component/alphabet.glade: Added a bit of space around the
	alphabet bar.

2000-05-30  Christopher James Lahey  <clahey@helixcode.com>

	* gui/component/Makefile.am: Added alphabet.glade and
	alphabet.glade.h.

	* gui/component/addressbook.c, gui/component/alphabet.glade,
	gui/component/alphabet.glade.h: Added an alphabet bar.

	* gui/minicard/e-minicard-view.c, gui/minicard/e-minicard-view.h,
	gui/minicard/e-reflow-sorted.c, gui/minicard/e-reflow-sorted.h:
	Added the ability to just to a particular spot in the reflow.

2000-05-30  Christopher James Lahey  <clahey@helixcode.com>

	* printing/Makefile.am: Added BONOBO_GNOME_CFLAGS to CPPFLAGS.

2000-05-30  Christopher James Lahey  <clahey@helixcode.com>

	* gui/minicard/e-minicard-view.c: Made double clicking create a
	new card.  Set the empty message.

	* gui/minicard/e-minicard.c: Made sorting be case insensitive.

	* gui/minicard/e-reflow-sorted.c, e-reflow.c, e-reflow.h: Added a
	message for when the reflow is empty.

	* printing/e-contact-print.c, printing/medbook.ecps: Made the
	default printout be full page.  Made sorting case insensitive.

2000-05-30  Christopher James Lahey  <clahey@helixcode.com>

	* backend/ebook/e-book-view-listener.c,
	backend/ebook/e-book-view-listener.h, backend/ebook/e-book-view.c,
	backend/ebook/e-book-view.h, backend/idl/addressbook.idl,
	backend/pas/pas-backend-file.c, backend/pas/pas-backend-ldap.c,
	backend/pas/pas-book-factory.c, backend/pas/pas-book-view.c,
	backend/pas/pas-book-view.h: Added "sequence_complete" signal.

	* printing/e-contact-print.c: Made printing wait for
	"sequence_complete" signal and made it sort.

2000-05-25  Christopher James Lahey  <clahey@helixcode.com>

	* gui/component/addressbook.c,
	gui/component/e-addressbook-model.c,
	gui/component/e-addressbook-model.h: Added double click to open
	contact editor.

2000-05-25  Christopher James Lahey  <clahey@helixcode.com>
